<resources>
    <string name="app_name">Beats</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title">Shoppings</string>
    <string name="login_title">Meu Beats</string>
    <string name="login_subtitle">Especializado em fones para deejay</string>
    <string name="username">Usuário</string>
    <string name="password">Senha</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_app_login">AppLoginActivity</string>
    <string name="user_missing_error">Usuário é obrigatório</string>
    <string name="login_button_text">Entrar</string>
    <string name="not_yet_signed">Ainda não é cadastrado(a)?</string>
    <string name="about_link"><a href='https://google.com'>Inscreva-se</a></string>
    <string name="logout">Logout</string>
    <string name="question_mark">\?</string>
    <string name="loading">Carregando Informações, Aguarde...</string>
    <string name="empty_list_error">Lista vazia</string>
    <string name="buy">Comprar</string>

    <string name="waiting_message">Aguarde um momento...</string>
    <string name="connection_type_label">Conexão</string>
    <string name="compatibility_label">Compatibilidade</string>
    <string name="power_supply_type_label">Alimentação</string>
    <string name="battery_life_time_label">Autonomia</string>
    <string name="capture_type_label">Captação</string>

    <string name="connection_type_value">Blutooth</string>
    <string name="compatibility_value">Blutooth 4.1</string>
    <string name="power_supply_type_value">Bateria</string>
    <string name="battery_life_time_value">16 horas</string>
    <string name="capture_type_value">Semi activa</string>
    <string name="selected_product_name">Modelo 01</string>
    <string name="hours">horas</string>
</resources>